# RAG-with-Evals

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
__pycache__/: config.cpython-312.pyc.2138023412768
backend/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/utils/: Agents.py  document_processor.py  rag_chain.py  vector_store.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
utils/: document_processor.py  rag_chain.py  vector_store.py
utils/__pycache__/: document_processor.cpython-312.pyc.2138030462640  document_processor.cpython-312.pyc.2421294728240  rag_chain.cpython-312.pyc.1623900460448  rag_chain.cpython-312.pyc.2306836790640  vector_store.cpython-312.pyc.2137310338096  vector_store.cpython-312.pyc.2306844549936  vector_store.cpython-312.pyc.2468222296880
vectorstore/: chroma.sqlite3
